# libsndfile

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  Makefile.am  README  README.md  azure-pipelines.yml  configure.ac  download.md  features.md  history.md  index.md  licensing.md  see-also.md  similar.md
cmake/: CMakeCargo.cmake  ClipMode.cmake  SndFileChecks.cmake
include/: sndfile.h
programs/: sndfile-cmp.c  sndfile-play.c  sndfile-salvage.c
regtest/: checksum.c  database.c  sndfile-regtest.c
sndfile-rust/: CMakeLists.txt  Cargo.toml
sndfile-rust/src/: audio_detect.rs  chunk.rs  command.rs  common.rs  file_io.rs  float32.rs  htk.rs  id3.rs  lib.rs  pcm.rs  sfendian.rs  strings.rs
src/: Symbols.darwin  Symbols.gnu-binutils  Symbols.os2  aiff.c  alac.c  alaw.c  au.c  audio_detect.c  avr.c  broadcast.c  caf.c  cart.c  chanmap.c  chunk.c  command.c  common.c  common.h  config.h.cmake  dither.c  double64.c  dwd.c  dwvw.c  file_io.c  flac.c  float32.c  g72x.c  gsm610.c  htk.c  id3.c  ima_adpcm.c  ima_oki_adpcm.c  ircam.c  libsndfile-1.def  macos.c  mat4.c  mat5.c  mpc2k.c  ms_adpcm.c  new.c  nist.c  (+45 more)
tests/: aiff_rw_test.c  alaw_test.c  benchmark.c  benchmark.tpl  channel_test.c  checksum_test.c  chunk_test.c  command_test.c  compression_size_test.c  cpp_test.cc  cue_test.c  dft_cmp.c  dither_test.c  dwvw_test.c  error_test.c  external_libs_test.c  fix_this.c  floating_point_test.c  floating_point_test.tpl  format_check_test.c  generate.c  header_test.c  header_test.tpl  headerless_test.c  largefile_test.c  locale_test.c  lossy_comp_test.c  (+30 more)
(+3 files in other folders)
