[package]
name = "sndfile-rust"
version = "0.1.0"
authors = ["evpobr <evpobr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
libc = "0.2"
winapi = {version = "0.3", features = ["winnt"]}
