[package]
name = "sndfile-rust"
version = "0.1.0"
authors = ["evpobr <evpobr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
bitflags = "1.2"
byte-strings = "0.1.3"
errno = "0.2.5"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.9", features = ["winnt", "fileapi", "handleapi",
    "winbase", "winerror", "errhandlingapi", "processenv", "stringapiset",
    "winnls"]}
widestring = "0.4.2"

[features]
default = ["external-xiph-libs"]
external-xiph-libs = []

